--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "frontend-dev-challenge",
   "version": "0.1.0",
+  "author": "saswatamcode",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write \"./**/*.+(ts|tsx|js|jsx|json)\"",
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.1",
+    "postcss": "^8.2.3",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
