--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.3",
     "prettier": "^2.2.1",
