--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-loader-spinner": "^3.1.14"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
+    "@types/react-loader-spinner": "^3.1.3",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.3",
     "prettier": "^2.2.1",
