--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "format": "prettier --write \"./**/*.+(ts|tsx|js|jsx|json)\"",
     "typecheck": "tsc"
   },
