--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
     "@types/react-loader-spinner": "^3.1.3",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.3",
